@@ -1,5 +1,8 @@
 2006-01-26  Federico Mena Quintero  <federico@ximian.com>
 
+	* interfaces/share-dialog.glade.in: Turn on word wrapping in the
+	label_status widget; make it left-justified, and selectable.
+
 	* src/nautilus-share.c (property_page_commit): Return a boolean
 	success code.
 	(button_apply_clicked_cb): Don't close the standalone window if we
